src/test/deca/context/invalid/provided/testvoidreturn.deca
class A{
protected int x;
}
class B extends A {
int getX(A a) {
return a.x; // Erreur contextuelle : le type de 'a' (A) n'est pas
// un sous-type de B.
}
}
